[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Pictures/background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Pictures/Help.png" type="Texture" id=2]
[ext_resource path="res://Scripts/HelpEN.gd" type="Script" id=3]

[node name="Ajuda" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 511.339, 301.5 )
scale = Vector2( 2.70498, 2.62235 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 396.0
margin_top = 334.0
margin_right = 480.0
margin_bottom = 450.0
rect_scale = Vector2( 2.05326, 1.68927 )

[node name="Player" type="Button" parent="VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "Player"

[node name="Controls" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
text = "Controls"

[node name="Enemies" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 84.0
margin_bottom = 68.0
text = "Enemies"

[node name="Objectives" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 84.0
margin_bottom = 92.0
text = "Objectives"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 84.0
margin_bottom = 116.0
text = "Return"

[node name="Ajuda" type="Sprite" parent="VBoxContainer"]
position = Vector2( 44.8068, -92.3476 )
texture = ExtResource( 2 )

[connection signal="pressed" from="VBoxContainer/Player" to="." method="_on_Player_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Enemies" to="." method="_on_Enemies_pressed"]
[connection signal="pressed" from="VBoxContainer/Objectives" to="." method="_on_Objectives_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
